# grievous

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: basic_usage.py  bulk_generate.py  json_schema.py
grievous/: backend.py  server.py
tests/: test_backend.py
