[project]
name = "grievous"
version = "0.1.0"
description = "A hallucination engine. Typed pseudorandom data via LLM. No guarantees. Trigger discipline required."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
grievous = "grievous.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grievous"]
