[project]
name = "grievous-mcp"
version = "0.1.1"
description = "A hallucination engine. Typed pseudorandom data via LLM. No guarantees. Trigger discipline required."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AB Ahmad", email = "ab.ahmad@icloud.com" }]
keywords = ["mcp", "llm", "test-data", "anthropic", "hallucination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/darthcoder/grievous"
Repository = "https://github.com/darthcoder/grievous"

[project.scripts]
grievous = "grievous.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grievous"]
